--- a/stimopt/stimulus_optimization.tex
+++ b/stimopt/stimulus_optimization.tex
@@ -274,7 +274,7 @@ Both of these conditions can be dealt with by re-intializing the optimization fr
 This method should be implemented even when the algorithm successfully terminates, as the search method does not guarantee that a global maximum will be found. 
 
 \section{A worked example}
-\cite{mobarhan2018} have shown that an eDOG network configuration where inhibitory cortical feedback is delayed compared to excitatory feedback shifts the temporal filtering properties of dLGN relay cell responses to drifting grating stimuli from low-pass (when feedback weights are 0) to band-pass (for increasing weights). Presently, data is being collected for dLGN relay cell responses to a "full-field chirp" stimulus with via optogenetic suppression of cortical feedback. Previous results \citep{mobarhan2018} suggest that the response matrix to a chirp stimulus would contain higher power in at some peak temporal frequency when cortical feedback is present. It can be seen from (\ref{objfunc}) that the response to a certain frequency $\omega$ present in the stimulus is proportional to the impulse-response function $\hat{G}$ evaluated at $\omega$. Let $\hat{G}_r^\alpha$ represent the response of a model instance with feedback present, and $\hat{G}_r^\beta$ represent the response of a model instance without feedback.
+\cite{mobarhan2018} have shown that an eDOG network configuration where inhibitory cortical feedback is delayed compared to excitatory feedback shifts the temporal filtering properties of dLGN relay cell responses to drifting grating stimuli from low-pass (when feedback weights are 0) to band-pass (for increasing weights). Presently, data is being collected for dLGN relay cell responses to a "full-field chirp" stimulus with via optogenetic suppression of cortical feedback. Previous results \citep{mobarhan2018} suggest that the response matrix to a chirp stimulus would contain higher power in at some peak temporal frequency when cortical feedback is present. It can be seen from (\ref{objfunc}) that the response to a certain angular frequency $\omega$ present in the stimulus is proportional to the impulse-response function $\hat{G}$ evaluated at $\omega$. Let $\hat{G}_r^\alpha$ represent the response of a model instance with feedback present, and $\hat{G}_r^\beta$ represent the response of a model instance without feedback.
 
 \begin{align*}
 	\hat{G}_r^\alpha & = \frac{\hat{K}_{rg} + \hat{K}_{rig}}
